[package]
name = "sandbox-route-helper"
version = "0.1.7"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sandbox-route-helper"
path = "src/main.rs"

[features]
# `test-env-override` — opts the helper-side users.conf path resolution
# (`sandbox_core::users_conf::route_helper_users_conf_path`) into
# honoring the `SANDBOX_USERS_CONF` environment variable. Default
# builds ignore the env var; the cap'd helper binary must not be
# redirectable to an attacker-controlled config file via a process-
# environment variable.
#
# The `route-helper` integration-test target enables this feature
# explicitly so the tests can install their tempfile config via the
# env var. See `Makefile`'s `install-route-helper-test-cap` target.
test-env-override = ["sandbox-core/test-env-override"]

[dependencies]
sandbox-core.workspace = true
# Feature set:
#   - "user"  — `User::from_uid` for stderr name lookup; transitively
#               required by `sandbox-core`'s `SubnetEntry::allows_uid`.
#   - "sched" — `setns(fd, CLONE_NEWNET)` to enter the container netns.
#   - "net"   — `getifaddrs()` to enumerate netns IPv4 addresses (step 6).
# `pidfd_open(2)` is NOT exposed by nix 0.29 (no module, no feature
# gate); we invoke it via `libc::syscall(SYS_pidfd_open, ...)` instead.
nix = { version = "0.29", features = ["user", "sched", "net"] }
# Required only for the direct `pidfd_open` syscall and the matching
# errno read. The rest of the crate uses nix wrappers.
libc = "0.2"
# Manipulate the helper's own capability sets so `CAP_NET_ADMIN` survives
# the `ip(8)` exec via the ambient set — required under rootful Docker
# where the container netns is in init userns and there's no userns
# implicit-cap promotion to cover the post-exec child.
caps = "0.5"
# JSON-Lines serialization for the audit log. Workspace pin; the cap'd
# binary's TCB grows by serde_json, but the alternative (hand-rolled JSON
# escaping in privileged code) is strictly worse.
serde_json.workspace = true
# RFC 3339 UTC timestamps for the audit log `ts` field. Workspace pin.
chrono.workspace = true

[dev-dependencies]
# Used by the integration tests to checksum the installed cap'd
# binary against the cargo-built one — a mismatch means the
# operator rebuilt without re-installing, so the tests would be
# exercising a stale binary.
ring.workspace = true
tempfile.workspace = true
# Used by the integration tests to parse the audit-log JSON-Lines
# output and assert on field shape.
serde_json.workspace = true
