[package]
name = "sandbox-spawn-helper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sandbox-spawn-helper"
path = "src/main.rs"

[features]
# `test-env-override` — opts the helper into honouring the
# `SANDBOX_SPAWN_HELPER_TEST_SANDBOX_GROUP` env var as an override for
# the `sandbox` group name used in the caller-membership check. Default
# production builds ignore the env var and resolve the literal group
# name `"sandbox"` via `getgrnam(3)`.
#
# The cap'd helper binary must not be redirectable to an attacker-
# controlled group name via a process-environment variable, because
# `setresuid(operator_uid)` is gated by the caller's membership in the
# resolved group. Honouring an env var unconditionally would let any
# user who can exec the helper redirect the check to a group they
# belong to, defeating the gate.
#
# The integration-test target enables this feature explicitly so tests
# can swap the production group for a synthetic test group they own.
# See `Makefile`'s `install-spawn-helper-test-cap` target.
test-env-override = []

[dependencies]
# Feature set:
#   - "user"  — `User::from_uid` for operator-uid resolution via
#               `getpwuid_r(3)`.
nix = { version = "0.29", features = ["user"] }
# Direct `setresuid(2)` invocation + `getgroups(2)` enumeration.
# nix 0.29 exposes `setresuid` via the `user` feature, but we use the
# libc syscall directly so the helper's TCB does not grow a transitive
# dependency on every wrapper nix bundles under that feature gate.
libc = "0.2"
# Manipulate the helper's own capability sets so `CAP_SETUID` is cleared
# from permitted+effective+inheritable BEFORE `execve` — the spawned
# runtime tool must inherit zero file capabilities even though the
# helper itself has `cap_setuid+ep` applied at install time.
caps = "0.5"

[dev-dependencies]
tempfile.workspace = true
