[package]
name = "sandboxd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
# M10-S4 Phase 2: `axum-extra::extract::Query` supports repeatable
# query-string parameters (`?layer=a&layer=b` → `Vec<_>`).  The axum 0.8
# built-in `Query` extractor delegates to `serde_urlencoded`, which fails
# outright on repeated keys for `Vec<String>` fields; the `query` feature
# here pulls in `serde_html_form` which does the right thing.  Version
# tracks the axum 0.8 family (axum-extra 0.10.x).
axum-extra = { version = "0.10", features = ["query"] }
clap.workspace = true
ring.workspace = true
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
http-body-util = { workspace = true }
refinery.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
