[package]
name = "sandboxd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
# M10-S4 Phase 2: `axum-extra::extract::Query` supports repeatable
# query-string parameters (`?layer=a&layer=b` → `Vec<_>`).  The axum 0.8
# built-in `Query` extractor delegates to `serde_urlencoded`, which fails
# outright on repeated keys for `Vec<String>` fields; the `query` feature
# here pulls in `serde_html_form` which does the right thing.  Version
# tracks the axum 0.8 family (axum-extra 0.10.x).
axum-extra = { version = "0.10", features = ["query"] }
# M10-S4 Phase 3: `async_stream::stream!` lets the HTTP handler express
# "emit replay lines, then loop on broadcast::Receiver::recv" as straight-
# line async code.  Alternative is hand-rolling `futures::stream::unfold`,
# which costs ~20 extra lines and obscures the ordering contract.
async-stream = "0.3"
# M10-S4 Phase 3: the follow streaming path stamps synthetic
# `lifecycle.ring_buffer_lag` JSONL lines with an RFC-3339 UTC
# timestamp.  chrono was already a dev-dep; promoted to a direct dep
# so the handler can produce the timestamp without threading through
# sandbox-core's domain types.
chrono.workspace = true
# `env` enables the `#[arg(env = "...")]` derive attribute used on
# `--events-persist-retention-days` to fall back to
# `SANDBOX_EVENTS_PERSIST_RETENTION_DAYS`. The workspace clap dep only
# carries `derive`; without re-stating `env` here the crate compiles only
# under workspace feature unification (via `sandbox-deny-logger` which
# also opts into `env`), so isolated `cargo check -p sandboxd` fails.
clap = { workspace = true, features = ["env"] }
ring.workspace = true
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = { workspace = true }
refinery.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
