[package]
name = "sandboxd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
# `axum-extra::extract::Query` supports repeatable query-string
# parameters (`?layer=a&layer=b` → `Vec<_>`). The axum 0.8 built-in
# `Query` extractor delegates to `serde_urlencoded`, which fails
# outright on repeated keys for `Vec<String>` fields; the `query`
# feature here pulls in `serde_html_form` which does the right thing.
# Version tracks the axum 0.8 family (axum-extra 0.10.x).
axum-extra = { version = "0.10", features = ["query"] }
# `async_stream::stream!` lets the events HTTP handler express
# "emit replay lines, then loop on broadcast::Receiver::recv" as straight-
# line async code.  Alternative is hand-rolling `futures::stream::unfold`,
# which costs ~20 extra lines and obscures the ordering contract.
async-stream = "0.3"
# `futures-util::StreamExt` lets the WebSocket-to-byte-stream adapter
# in `proxy_http` call `.next()` on `axum::extract::ws::WebSocket`
# (which implements `futures::Stream`, not `tokio`'s native shape).
# Already a transitive dep via axum; the direct line just makes the
# import legible. Default features are off because we only need the
# stream extension traits, not the executor / I/O reexports.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# The follow streaming path stamps synthetic
# `lifecycle.ring_buffer_lag` JSONL lines with an RFC-3339 UTC
# timestamp.  chrono was already a dev-dep; promoted to a direct dep
# so the handler can produce the timestamp without threading through
# sandbox-core's domain types.
chrono.workspace = true
# `env` enables the `#[arg(env = "...")]` derive attribute used on
# `--events-persist-retention-days` to fall back to
# `SANDBOX_EVENTS_PERSIST_RETENTION_DAYS`. The workspace clap dep only
# carries `derive`; without re-stating `env` here the crate compiles only
# under workspace feature unification (via `sandbox-nft-deny-logger`
# which also opts into `env`), so isolated `cargo check -p sandboxd`
# fails.
clap = { workspace = true, features = ["env"] }
# The cap-aware `resolve_route_helper_path` reads
# the `security.capability` xattr via `libc::getxattr` to verify each
# candidate route-helper binary actually carries `CAP_SYS_ADMIN+ep`
# before accepting it. `nix` 0.29 does not expose xattr wrappers, so we
# call libc directly (same pattern `sandbox-route-helper` uses for
# `pidfd_open`). Pinning to the same `0.2` line that crate already uses
# keeps the workspace on a single libc version.
libc = "0.2"
# Daemon-startup users.conf validation needs the
# daemon's own uid (`Uid::current`) plus uid → username resolution
# (`User::from_uid`) for the "no matching subnet" error message. The
# `user` feature is the same one `sandbox-core` already opts into for
# its `getpwnam_r` lookups in `users_conf::SubnetEntry::allows_uid`.
nix = { version = "0.29", features = ["user"] }
ring.workspace = true
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
# `test-env-override` — forwarded to `sandbox-core/test-env-override`.
# When enabled, the daemon's gateway-image / lite-image presence-probe
# helpers consult `SANDBOX_GATEWAY_TAG_OVERRIDE` /
# `SANDBOX_LITE_TAG_OVERRIDE` so the doctor-diagnostics integration
# tests can point the daemon at a guaranteed-absent tag and exercise
# the missing-image failure surface independently of the host's docker
# image inventory. The route-helper users.conf override is gated by
# the same feature on `sandbox-core`; both are off in production
# builds (the daemon's behavior must not depend on attacker-readable
# process environment).
test-env-override = ["sandbox-core/test-env-override"]

[dev-dependencies]
# `hyper` + `hyper-util` provide an HTTP/1.1 client over the per-test
# `tokio::net::UnixStream` so `integration_owner_peercred.rs` can drive
# `POST /sessions` through the real `PeerCredListener` acceptor (mirrors
# the production `sandbox` CLI's HTTP-over-unix path in
# `sandbox-cli/src/main.rs`). Other integration tests stay on the
# `tower::ServiceExt::oneshot` in-process router path that bypasses the
# socket; the peer-cred test is the only one that needs a real listener.
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
refinery.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
# `tokio-tungstenite` is the WebSocket client the proxy integration
# test uses to drive a real WebSocket against the `axum`-served
# `GET /sessions/{id}/proxy` endpoint. The same version axum's `ws`
# feature pulls transitively (0.29.x), pinned here so the dev-dep
# graph is self-documenting. Default features are off because we only
# need the plain ws:// client — no TLS, no native-tls plumbing.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
tower = { version = "0.5", features = ["util"] }
